Adjust dynamic layout to prevent overflow

--- a/packages/frontend/src/features/AccountDetails/components/Subscriptions/index.module.css
+++ b/packages/frontend/src/features/AccountDetails/components/Subscriptions/index.module.css
@@ -3,7 +3,15 @@
     grid-template-columns: repeat(1, 1fr);
     gap: 16px;
 
-    @media (min-width: $mantine-breakpoint-sm) {
+    @media (min-width: $mantine-breakpoint-md) {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (min-width: $mantine-breakpoint-lg) {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    @media (min-width: $mantine-breakpoint-xl) {
         grid-template-columns: repeat(2, 1fr);
     }
 }
